--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -924,55 +924,37 @@ summary_results %>%
   labs(x = "", y = "")
 ```
 
-Echter, voor de densiteit (aantal per 100 ha) worden het totaal aantal broedparen gedeeld door de oppervlakte van de volledige regio. Dit terwijl we enkel cirkels met radius 300 m hebben onderzocht waarbinnen we gecontroleerd hebben voor detectiekans (`truncation = 300`). Het lijkt dus logischer te kijken naar het geschatte aantal broedparen per plot en dan om te zetten naar densiteit per 100 ha m.b.v. de oppervlakte van de telcirkel. De densiteiten worden zo wel een stuk groter.
+We kunnen vergelijken met de vorige resultaten waarbij we geen detectiekans in beschouwing namen:
 
-```{r visualise-final-model-ds-per-plot}
-plots_per_regio <- gele_kwik_2022 %>% 
-                     group_by(regio) %>% 
-                     summarise(n_plots = n_distinct(plotnaam), .groups = "drop")
+```{r visualise-final-model-comparison}
+# GLMM model met brms package
+GLMM_preds <- pred$`regio:periode_in_jaar` %>%
+  select(regio, periode_in_jaar, estimate__, lower__, upper__) %>%
+  mutate(across(.cols = is.numeric, .fns = function(i) {i / cirkelopp * 1e6}))
 
-summary_results %>%
-  filter(type == "individuals", variable == "abundance") %>%
-  full_join(plots_per_regio, by = "regio") %>%
-  mutate(Estimate = Estimate / n_plots,
-         lcl = lcl / n_plots,
-         ucl = ucl / n_plots) %>%
-  ggplot(aes(x = regio, y = Estimate)) + 
-  geom_point(aes(colour = periode_in_jaar), size = 4, 
-             position = position_dodge(width = 0.5)) +
-  geom_errorbar(aes(ymin = lcl, ymax = ucl, colour = periode_in_jaar), 
-                width = 0.25, position = position_dodge(width = 0.5)) + 
-  scale_y_continuous(sec.axis = sec_axis( ~. / cirkelopp * 1e6, 
-       name = "Aantal broedparen Gele kwikstaart per 100 ha")) +
-  labs(x = "", y = "Aantal broedparen Gele kwikstaart per plot")
-```
+GLMM_model <- GLMM_preds %>%
+  ggplot(aes(x = regio, y = estimate__)) + 
+    geom_point(aes(colour = periode_in_jaar), size = 4, 
+               position = position_dodge(width = 0.5)) +
+    geom_errorbar(aes(ymin = lower__, ymax = upper__, colour = periode_in_jaar), 
+                  width = 0.25, position = position_dodge(width = 0.5)) + 
+    scale_y_continuous(breaks = seq(0, 3, 0.5), limits = c(0, 3)) +
+    labs(x = "", y = "Aantal broedparen Gele kwikstaart per 100 ha", 
+         title = "GLMM (brms)") +
+    theme(legend.position = "bottom")
 
-Zo kunnen we ook eenvoudiger vergelijken met de vorige resultaten waarbij we geen detectiekans in beschouwing namen.
 
-```{r comparison-GLMM-ds}
-GLMM_model <- plot(pred, plot = FALSE)[[1]] + 
-                scale_y_continuous(sec.axis = sec_axis( ~. / cirkelopp * 1e6, 
-                  name = ""), limits = c(0, 2.5)) +
-                labs(y = "Aantal broedparen Gele kwikstaart per plot", x = "", 
-                     title = "GLMM (brms)") +
-                theme(legend.position = "bottom")
-
+# Distance model rekening houdend met detectiekans
 dist_model <- summary_results %>%
-  filter(type == "individuals", variable == "abundance") %>%
-  full_join(plots_per_regio, by = "regio") %>%
-  mutate(Estimate = Estimate / n_plots,
-         lcl = lcl / n_plots,
-         ucl = ucl / n_plots) %>%
+  filter(type == "individuals", variable == "density") %>%
   ggplot(aes(x = regio, y = Estimate)) + 
-  geom_point(aes(colour = periode_in_jaar), size = 4, 
-             position = position_dodge(width = 0.5)) +
-  geom_errorbar(aes(ymin = lcl, ymax = ucl, colour = periode_in_jaar), 
-                width = 0.25, position = position_dodge(width = 0.5)) + 
-  scale_y_continuous(sec.axis = sec_axis( ~. / cirkelopp * 1e6, 
-       name = "Aantal broedparen Gele kwikstaart per 100 ha"), 
-       limits = c(0, 2.5)) +
-  labs(x = "", y = "", title = "Distance sampling (Distance)") +
-  theme(legend.position = "bottom")
+    geom_point(aes(colour = periode_in_jaar), size = 4, 
+               position = position_dodge(width = 0.5)) +
+    geom_errorbar(aes(ymin = lcl, ymax = ucl, colour = periode_in_jaar), 
+                  width = 0.25, position = position_dodge(width = 0.5)) + 
+    scale_y_continuous(breaks = seq(0, 3, 0.5), limits = c(0, 3)) +
+    labs(x = "", y = "", title = "Distance sampling (Distance)") +
+    theme(legend.position = "bottom")
 
 grid.arrange(GLMM_model, dist_model, ncol = 2)
 ```
@@ -1147,39 +1129,29 @@ summary_results_binned <- bind_rows(
 
 # Plot continuous model
 dist_model2 <- summary_results %>%
-  filter(type == "individuals", variable == "abundance") %>%
-  full_join(plots_per_regio, by = "regio") %>%
-  mutate(Estimate = Estimate / n_plots,
-         lcl = lcl / n_plots,
-         ucl = ucl / n_plots) %>%
+  filter(type == "individuals", variable == "density") %>%
   ggplot(aes(x = regio, y = Estimate)) + 
-  geom_point(aes(colour = periode_in_jaar), size = 4, 
-             position = position_dodge(width = 0.5)) +
-  geom_errorbar(aes(ymin = lcl, ymax = ucl, colour = periode_in_jaar), 
-                width = 0.25, position = position_dodge(width = 0.5)) + 
-  scale_y_continuous(sec.axis = sec_axis( ~. / cirkelopp * 1e6, 
-       name = ""), limits = c(0, 2.5)) +
-  labs(x = "", y = "Aantal broedparen gele kwikstaart per plot", 
-       title = "Distance sampling continuous") +
-  theme(legend.position = "bottom")
+    geom_point(aes(colour = periode_in_jaar), size = 4, 
+               position = position_dodge(width = 0.5)) +
+    geom_errorbar(aes(ymin = lcl, ymax = ucl, colour = periode_in_jaar), 
+                  width = 0.25, position = position_dodge(width = 0.5)) + 
+    scale_y_continuous(breaks = seq(0, 3, 0.5), limits = c(0, 3)) +
+    labs(x = "", y = "Aantal broedparen gele kwikstaart per 100 ha", 
+         title = "Distance sampling continuous") +
+    theme(legend.position = "bottom")
 
 # Plot binned model
 dist_model_binned <- summary_results_binned %>%
-  filter(type == "individuals", variable == "abundance") %>%
-  full_join(plots_per_regio, by = "regio") %>%
-  mutate(Estimate = Estimate / n_plots,
-         lcl = lcl / n_plots,
-         ucl = ucl / n_plots) %>%
+  filter(type == "individuals", variable == "density") %>%
   ggplot(aes(x = regio, y = Estimate)) + 
-  geom_point(aes(colour = periode_in_jaar), size = 4, 
-             position = position_dodge(width = 0.5)) +
-  geom_errorbar(aes(ymin = lcl, ymax = ucl, colour = periode_in_jaar), 
-                width = 0.25, position = position_dodge(width = 0.5)) + 
-  scale_y_continuous(sec.axis = sec_axis( ~. / cirkelopp * 1e6, 
-       name = "Aantal broedparen Gele kwikstaart per 100 ha"), 
-       limits = c(0, 2.5)) +
-  labs(x = "", y = "", title = "Distance sampling binned") +
-  theme(legend.position = "bottom")
+    geom_point(aes(colour = periode_in_jaar), size = 4, 
+               position = position_dodge(width = 0.5)) +
+    geom_errorbar(aes(ymin = lcl, ymax = ucl, colour = periode_in_jaar), 
+                  width = 0.25, position = position_dodge(width = 0.5)) + 
+    scale_y_continuous(breaks = seq(0, 3, 0.5), limits = c(0, 3)) +
+    labs(x = "", y = "", 
+         title = "Distance sampling binned") +
+    theme(legend.position = "bottom")
 
 # Plot next to each other
 grid.arrange(dist_model2, dist_model_binned, ncol = 2)
@@ -2091,6 +2063,11 @@ df_territoria$cluster <- result[[1]]$observations$cluster
 In totaal hadden we `r nrow(result[[1]]$observations)` observaties (waarneming van een bepaald individu in een plot in een bepaalde telperiode). Nu hebben we `r nrow(result[[1]]$cluster)` clusters (= broedparen).
 
 ```{r visualisatie-territoria}
+# Hoeveel plots per regio
+plots_per_regio <- gele_kwik_2022 %>% 
+                     group_by(regio) %>% 
+                     summarise(n_plots = n_distinct(plotnaam), .groups = "drop")
+
 territoria_per_plot <- df_territoria %>% 
   
   # Join om regio's te krijgen
